<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EpamPracticeFirst</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="clear_dialog_cancel">Cancel</string>
    <string name="clear_dialog_confirm">OK</string>
    <string name="clear_dialog_text">Really nigga?</string>
    <string name="divide">Divide</string>
    <string name="division_by_zero">you divide by 0, even I won’t help you, sorry</string>
    <string name="empty_fields">Fill in both fields</string>
    <string name="error">Oh shit, try again</string>
    <string name="field1">Number 1</string>
    <string name="field2">Number 2</string>
    <string name="float_values">Use float numbers</string>
    <string name="minus">Minus</string>
    <string name="multiply">Multiply</string>
    <string name="operation_not_found">Please, choose an operation</string>
    <string name="plus">Plus</string>
    <string name="result">Result</string>
    <string name="signed_values">Use signed numbers</string>
</resources>
